Just a animation things

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script>
 
     <!-- Optional JavaScript -->
@@ -18,20 +19,8 @@
 
   </head>
   <body>
-    <div class="render">
-      <span class="text">H</span>
-      <span class="text">e</span>
-      <span class="text">l</span>
-      <span class="text">l</span>
-      <span class="text">o</span>
-      <span class="text">,</span>
-      <span class="text">&nbsp;</span>
-      <span class="text">w</span>
-      <span class="text">o</span>
-      <span class="text">r</span>
-      <span class="text">l</span>
-      <span class="text">d</span>
-      <span class="text">!</span>
+    <div class="logo">
+      This is Apache Cordova
     </div>
     
     <link rel="stylesheet" href="./css/main.css">
