added some animations

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,22 @@
         class="img-thumb" >
     </div>
     <div class="title bg-success text-white">
-      Green Sea Turtle
+      <div class="text">G</div>
+      <div class="text">r</div>
+      <div class="text">e</div>
+      <div class="text">e</div>
+      <div class="text">n</div>
+      <div class="text">&nbsp;</div>
+      <div class="text">S</div>
+      <div class="text">e</div>
+      <div class="text">a</div>
+      <div class="text">&nbsp;</div>
+      <div class="text">T</div>
+      <div class="text">u</div>
+      <div class="text">r</div>
+      <div class="text">t</div>
+      <div class="text">l</div>
+      <div class="text">e</div>
     </div>
     <div class="description">
       The green sea turtle (Chelonia mydas), also known as the green turtle, black (sea) turtle or Pacific green turtle, is a species of large sea turtle of the family Cheloniidae. It is the only species in the genus Chelonia. Its range extends throughout tropical and subtropical seas around the world, with two distinct populations in the Atlantic and Pacific Oceans, but it is also found in the Indian Ocean. The common name refers to the usually green fat found beneath its carapace, not to the color of its carapace, which is olive to black.
